[package]
name = "nft-staking-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = {version = "1.5.7", features = ["derive"]}
mpl-token-metadata = "5.1.0"
solana-program = "2.2.1"
spl-associated-token-account = {version = "6.0.0", features = ["no-entrypoint"]}
spl-token = {version = "8.0.0", features = ["no-entrypoint"]}
thiserror = "2.0.12"